feat: la app es funcional con algunos detalles a modificar luego

--- a/Front/Super-Mas/components/navbar.html
+++ b/Front/Super-Mas/components/navbar.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-logo">
-            <a href="/html/index.html" class="logo-link">
+            <a href="../html/index.html" class="logo-link">
                 <img src="../assets/icons/super-mas-icon.png" alt="Logo SuperMás">
                 <div class="logo-text">
                     <span class="logo-title">SuperMás</span>
@@ -21,16 +21,16 @@
         <div class="navbar-links">
             <ul>
                 <li>
-                    <a href="/html/clientes.html" class="nav-link">Clientes</a>
+                    <a href="../html/clientes.html" class="nav-link">Clientes</a>
                 </li>
                 <li>
-                    <a href="/html/productos.html" class="nav-link">Productos</a>
+                    <a href="../html/productos.html" class="nav-link">Productos</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link" onclick="showSection('ventas', this)">Registrar Venta</a>
+                    <a class="nav-link" onclick="showSection('ventas', this)">Registrar Venta</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link" onclick="showSection('estadisticas', this)">Estadísticas</a>
+                    <a class="nav-link" onclick="showSection('estadisticas', this)">Estadísticas</a>
                 </li>
             </ul>
         </div>
